<resources>
    <string name="app_name">Majesty</string>
    <string name="title_activity_login">Login</string>
    <string name="Home">Home</string>
    <string name="Cart">Cart</string>
    <string name="Favorite">Favorites</string>
    <string name="Menu">Menu</string>
    <string name="Orders">My Orders</string>
    <string name="popular">Popular Food</string>
    <string name="freshOffers">Fresh Offers</string>
    <string name="more">More</string>

    <string name="load">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id" translatable="false">637947423244006</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb637947423244006</string>

    <string name="open">open</string>
    <string name="close">open</string>
    <string name="title_activity_maps">Map</string>


    <string-array name="languages_tag">
        <item>ar</item>
        <item>en</item>
        <item>fr</item>
    </string-array>


    <string-array name="languages">
        <item>عربى</item>
        <item>English</item>
        <item>Française</item>
    </string-array>

    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="select_address">Select Delivery Address</string>
    <string name="address_book">Address Book</string>
    <string name="mainaddress">Main Address</string>
    <string name="editaddress">Edit Address</string>
    <string name="deleteaddress">Delete Address</string>
    <string name="min">Minutes</string>
    <string name="choose_your_area">Choose Your Area </string>
    <string name="contact_info">Contact information</string>
    <string name="phone_num"><font>*</font>رقم التليفون</string>
    <string name="second_phone_num"><font>*</font>رقم التليفون الثانى</string>
    <string name="pass"><font>*</font>رمز المرور</string>
    <string name="repass"><font>*</font>أعد رمز المرور</string>

    <string name="notCorrectPhone">Phone Not Correct or Duplicate</string>

    <string name="dataUpdate">Your Data Updated Successfully</string>


    <string name="Please_select_city_first">Please Select City First</string>
    <string name="Please_select_area_first">Please Select Area First</string>
    <string name="addressAdded">Address Add Successfully</string>
    <string name="cant_get_location">Can\'t Get Your Location Please Try Again</string>
    <string name="login_cancel">Login Cancel , Please Try Again</string>
    <string name="not_registered">This Account Not Registered</string>
    <string name="facebooklogindone">Facebook Login Success , Please Complete Your Data</string>
    <string name="facebookused">This Facebook account has been used before</string>
    <string name="not_valid_birth">Not Valid BirthDay</string>
    <string name="notLogged">Not Logged Please Login First</string>
    <string name="itemnotedit">Item Can\'t Edited Successfully from your cart</string>
    <string name="itemnottreroved">Item Removed Successfully from your cart</string>
    <string name="itemnedited">Item Edited Successfully from your cart</string>
    <string name="itemtocart">Item Added To Cart Successfully</string>
    <string name="itemnottocart">This Item Failed To Add To Cart Please Tray Again Later</string>
    <string name="phoneerror">Error in your phone call</string>
    <string name="cityfirst">Please Select City First</string>
    <string name="areafirst">Please Select Area First</string>
    <string name="addressedited">Address Edited Successfully !!</string>
    <string name="orderDone">Order Added Successfully , Thank You</string>
    <string name="emptycart">Your Cart Is Empty Please Add Items In It</string>


    <string name="selectsubare">Please Select SubArea</string>
    <string name="enterStreet">Please Enter Street</string>
    <string name="buildnum">Please Enter BuildingNumber</string>
    <string name="floarNum">Please Enter FloorNumber</string>
    <string name="ApartmentNumber">Please Enter ApartmentNumber</string>
    <string name="PasswordError">Password Error</string>
    <string name="phone11">Phone Must be 11 numbre</string>
    <string name="title">Please Enter Title </string>
    <string name="mailnotvalid">Not Valid Mail </string>
    <string name="firstName">First Name Must be At Least 2 Letters</string>
    <string name="SecondName">Second Name Must be At Least 2 Letters</string>
    <string name="pass6">Passowrd Must be At Least 6 Letters</string>
    <string name="passnotmatch">Password Not Match</string>
    <string name="emailused">Email is already used before</string>
    <string name="openGps">Can\'t Get Location Data</string>
    <string name="openGps2">Please Open GPS Data</string>
    <string name="okay">OK</string>

    <string name="sendok">Your Feed Back Send Successfully</string>
    <string name="sendnotok">Failed TO Send , Try Again Later</string>
    <string name="vercodeerror">Verification code is very short</string>
    <string name="reload">Retry</string>
    <string name="tet1">Unable To Connect</string>
    <string name="tet2">Please Check Your Internet Connection</string>
    <string name="fresh_offers">Fresh Offers</string>
    <string name="popular_food">Popular Food</string>
    <string name="username">User Name</string>


</resources>
